# cvae-mnist

./: CONTRIBUTING.md  Makefile  README.md  params.yaml  pyproject.toml
mlruns/364246580049519168/: meta.yaml
mlruns/364246580049519168/2380593b41424ed688d5d78fa1ec94b7/: meta.yaml
mlruns/364246580049519168/2380593b41424ed688d5d78fa1ec94b7/artifacts/models/: model.pth
mlruns/364246580049519168/2380593b41424ed688d5d78fa1ec94b7/params/: elapsed_time
mlruns/364246580049519168/2380593b41424ed688d5d78fa1ec94b7/tags/: mlflow.runName  mlflow.source.name
mlruns/364246580049519168/3ba6717eec4a44ddb1e3f136b9643280/: meta.yaml
mlruns/364246580049519168/3ba6717eec4a44ddb1e3f136b9643280/artifacts/models/: model.pth
mlruns/364246580049519168/3ba6717eec4a44ddb1e3f136b9643280/params/: elapsed_time
mlruns/364246580049519168/3ba6717eec4a44ddb1e3f136b9643280/tags/: mlflow.runName
mlruns/364246580049519168/9d6fcf61d8654fb0bd89138fbbed3879/: meta.yaml
mlruns/364246580049519168/9d6fcf61d8654fb0bd89138fbbed3879/artifacts/models/: eval_metrics.csv
mlruns/364246580049519168/9d6fcf61d8654fb0bd89138fbbed3879/tags/: mlflow.runName  mlflow.source.name
mlruns/364246580049519168/c8967ae0c0064de89eb43f03c65f2201/: meta.yaml
mlruns/364246580049519168/c8967ae0c0064de89eb43f03c65f2201/artifacts/models/: model.pth
mlruns/364246580049519168/c8967ae0c0064de89eb43f03c65f2201/params/: elapsed_time
mlruns/364246580049519168/c8967ae0c0064de89eb43f03c65f2201/tags/: mlflow.runName
mlruns/364246580049519168/eb2e04d26a104a7484eb304f943fcae1/: meta.yaml
mlruns/364246580049519168/eb2e04d26a104a7484eb304f943fcae1/artifacts/models/: model.pth
mlruns/364246580049519168/eb2e04d26a104a7484eb304f943fcae1/params/: elapsed_time
mlruns/364246580049519168/eb2e04d26a104a7484eb304f943fcae1/tags/: mlflow.runName
models/: decoder.pth  model.pth
notebooks/: quick_start.ipynb
reports/: eval_metrics.csv
src/: config.py  dataset.py
src/cvae/: __init__.py  __main__.py  api.py  cli.py  config.py
src/cvae/service/: dataset.py  eval.py  experiment.py  gen.py  plots.py  train.py  utils.py
src/cvae/service/models/: conditional_decoder.py  nn_cvae.py
src/modeling/: generate.py  train.py  utils.py
src/modeling/models/: conditional_encoder.py  cvae.py
