[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "src"
version = "0.0.1"
description = "The project aims to explore the potential of Conditional Variational Autoencoders (C-VAEs) for generating synthetic data from specific image classes in the MNIST dataset."
authors = [
  { name = "moreira-and" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "black",
    "flake8",
    "pytest",
    "isort",
    "loguru",
    "pip",
    "python-dotenv",
    "tqdm",
    "typer",
    "torch (>=2.8.0,<3.0.0)",
    "torchvision (>=0.23.0,<0.24.0)",
    "numpy (>=2.0,<2.3)",
    "pandas (>=2.3.2,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "mlflow (>=3.3.2,<4.0.0)",
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["src"]
force_sort_within_sections = true


